feat: connect fonts, fix: positioning

--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@
 }
 
 html {
-    scroll-behavior: smooth; 
+    scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-height: 100vh;
 }
 
 a {
@@ -33,7 +35,7 @@ a {
 
 .menu__item {
     padding: 20px;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .menu__item:hover {
@@ -60,10 +62,11 @@ a {
 .main__img {
     width: 300px;
     height: 300px;
+    margin-top: 80px;
 }
 
 .main__main {
-    margin-left: 10px;
+    margin-left: 30px;
 }
 
 ul li {
@@ -72,8 +75,9 @@ ul li {
 
 .main__title {
     font-size: 50px;
+    font-weight: 700px;
     font-weight: 600;
-    margin-top: 40px;
+    margin-top: 80px;
 }
 
 .main__text {
@@ -88,11 +92,13 @@ h2.section__header {
 
 h2.aside__header {
     padding: 6px;
+    margin-top: 20px;
 }
 
 .section__text {
     margin: 20px 0;
-    font-size: 18px;
+    font-size: 20px;
+    line-height: 24px;
 }
 
 .code__text {
@@ -114,9 +120,10 @@ h2.aside__header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 30px;
 }
 
 .footer__item {
     padding: 20px;
-    font-size: 20px;
+    font-size: 22px;
 }
